tests/test0152.exp
Parse error, unexpected := ( tests/test0152.ctr: 3 )
Pointing hand should always be followed by variable!
