tests/test0152.ctr
'SINGLE_LANGUAGE'.

☞ :=.

